force-app/main/default/objects/Educational_Detail__c/Educational_Detail__c.object-meta.xml
<CustomObject>
    <description>Education details of HCP</description>
    <label>Educational Detail</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Educational Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Educational Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>