force-app/main/default/objects/Educational_Detail__c/fields/Education_institution__c.field-meta.xml
<CustomField>
    <fullName>Education_institution__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field has Education Institution Details</description>
    <label>Education institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>