force-app/main/default/objects/Educational_Detail__c/fields/Education_Major__c.field-meta.xml
<CustomField>
    <fullName>Education_Major__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field has about major field of education</description>
    <label>Education Major</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Post Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>