force-app/main/default/objects/Educational_Detail__c/fields/Education_status__c.field-meta.xml
<CustomField>
    <fullName>Education_status__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field has Education status</description>
    <label>Education status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>