force-app/main/default/objects/Educational_Detail__c/fields/Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Year__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field is about Graduated year</description>
    <label>Graduation Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1940</fullName>
            </value>
            <value>
                <fullName>1941</fullName>
            </value>
            <value>
                <fullName>1942</fullName>
            </value>
            <value>
                <fullName>1943</fullName>
            </value>
            <value>
                <fullName>1944</fullName>
            </value>
            <value>
                <fullName>1945</fullName>
            </value>
            <value>
                <fullName>1946</fullName>
            </value>
            <value>
                <fullName>1947</fullName>
            </value>
            <value>
                <fullName>1948</fullName>
            </value>
            <value>
                <fullName>1949</fullName>
            </value>
            <value>
                <fullName>1950</fullName>
            </value>
            <value>
                <fullName>1951</fullName>
            </value>
            <value>
                <fullName>1952</fullName>
            </value>
            <value>
                <fullName>1953</fullName>
            </value>
            <value>
                <fullName>1954</fullName>
            </value>
            <value>
                <fullName>1955</fullName>
            </value>
            <value>
                <fullName>1956</fullName>
            </value>
            <value>
                <fullName>1957</fullName>
            </value>
            <value>
                <fullName>1958</fullName>
            </value>
            <value>
                <fullName>1959</fullName>
            </value>
            <value>
                <fullName>1960</fullName>
            </value>
            <value>
                <fullName>1961</fullName>
            </value>
            <value>
                <fullName>1962</fullName>
            </value>
            <value>
                <fullName>1963</fullName>
            </value>
            <value>
                <fullName>1964</fullName>
            </value>
            <value>
                <fullName>1965</fullName>
            </value>
            <value>
                <fullName>1966</fullName>
            </value>
            <value>
                <fullName>1967</fullName>
            </value>
            <value>
                <fullName>1968</fullName>
            </value>
            <value>
                <fullName>1969</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>