force-app/main/default/objects/Educational_Detail__c/fields/TimeStamp_Decimal__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_Decimal__c</fullName>
    <description>Timestamp in decimal</description>
    <inlineHelpText>Timestamp in decimal</inlineHelpText>
    <label>TimeStamp Decimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>